# todo_cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALLATION.md  LICENSE  PLAN.md  README.md  RELEASE_NOTES_v0.1.1.md  WARP.md  completion_setup.sh  debug_datetime.py  dev_pwa.py  dev_webapp.py  pyproject.toml  test_improved_setup.py  todo_analytics_analytics_20250917_232544.json  todo_export_processed_20250928_185805.csv
.github/workflows/: README.md  ci.yml  pr-checks.yml  test.yml
docs/: APPLE_REMINDERS_SYNC.md  BIDIRECTIONAL_SYNC.md  CALENDAR_SYNC.md  MULTI_APP_SYNC_OVERVIEW.md  PHASE_6_APP_SYNC_PLAN.md  PRD for Todo Cli New Features.md  PROJECT_STATUS.md  PWA_SETUP.md  README_PHASE_TEMPLATE.md  SETUP_IMPROVEMENTS.md  WEB_APP_ARCHITECTURE.md  WEB_SYNC_STRATEGY.md  analytics_guide.md  phase4-frontend-plan.md  troubleshooting-sync.md
ios/: README.md
ios/TodoCLI.xcodeproj/: project.pbxproj
ios/TodoCLI/App/: ContentView.swift  TodoCLIApp.swift
ios/TodoCLI/Extensions/: Date+Extensions.swift
ios/TodoCLI/Models/: Project.swift  Task.swift  User.swift
ios/TodoCLI/Services/: APIClient.swift  AuthService.swift  TaskService.swift
ios/TodoCLI/Theme/: AppTheme.swift  Colors.swift
ios/TodoCLI/Views/Components/: EmptyStateView.swift  PriorityBadge.swift  TagChip.swift
ios/TodoCLI/Views/Focus/: FocusTimerView.swift
ios/TodoCLI/Views/Home/: HomeView.swift  QuickAddBar.swift
ios/TodoCLI/Views/Projects/: ProjectListView.swift
ios/TodoCLI/Views/Settings/: SettingsView.swift  ThemePickerView.swift
ios/TodoCLI/Views/Tasks/: TaskCreateView.swift  TaskDetailView.swift  TaskListView.swift  TaskRowView.swift
scripts/: repair_ids.py
src/fastapi/: __init__.py
src/httpx/: __init__.py
src/pydantic/: __init__.py
src/pydantic_settings/: __init__.py
src/todo_cli/: __init__.py  analytics.py  app_sync_adapter.py  app_sync_config.py  app_sync_manager.py  app_sync_models.py  calendar_integration.py  cli.py  cli_analytics.py  cli_app_sync.py  cli_backup.py  cli_calendar_sync.py  cli_doctor.py  config.py  credential_manager.py  dashboard.py  export.py  notifications.py  parser.py  plugins.py  project.py  project_analytics.py  query_engine.py  query_syntax.md  recommendations.py  recurring.py  simple_pdf.py  storage.py  sync.py  sync_engine.py  sync_mapping_store.py  theme.py  time_tracking.py  todo.py
src/todo_cli/adapters/: __init__.py  apple_reminders_adapter.py  todoist_adapter.py
src/todo_cli/cli/: __init__.py  ai_commands.py  analytics_commands.py  app_sync.py  backup.py  calendar.py  collab_commands.py  context.py  dashboard_commands.py  dependencies.py  doctor.py  legacy.py  pomodoro_commands.py  tags.py  tasks.py  theme_cmds.py  voice_commands.py  web.py
src/todo_cli/domain/: __init__.py  parser.py  project.py  recurring.py  todo.py
src/todo_cli/services/: __init__.py  ai_assistant.py  analytics.py  collaboration.py  dashboard.py  dashboard_renderer.py  export.py  notifications.py  plugins.py  pomodoro.py  project_analytics.py  query_engine.py  realtime.py  recommendations.py  simple_pdf.py  time_tracking.py  voice_input.py
src/todo_cli/services/integrations/: __init__.py  slack_plugin.py
src/todo_cli/sync/: __init__.py  app_sync_adapter.py  app_sync_config.py  app_sync_manager.py  app_sync_models.py  calendar_integration.py  service.py  sync_engine.py  sync_mapping_store.py
src/todo_cli/sync/providers/: __init__.py  anydo_adapter.py  apple_reminders_adapter.py  evernote_adapter.py  github_issues_adapter.py  google_tasks_adapter.py  jira_adapter.py  microsoft_todo_adapter.py  notion_adapter.py  omnifocus_adapter.py  things_adapter.py  ticktick_adapter.py  todoist_adapter.py
src/todo_cli/theme_engine/: __init__.py  engine.py  registry.py  schema.py  utils.py
src/todo_cli/theme_presets/: autumn.yaml  city_lights.yaml  dracula.yaml  forest.yaml  gruvbox_dark.yaml  matrix.yaml  nord.yaml  ocean.yaml  one_light.yaml  sky.yaml  solarized_dark.yaml  sunset.yaml  terminal.yaml
src/todo_cli/utils/: __init__.py  datetime.py  validation.py
src/todo_cli/web/: __init__.py  server.py
src/todo_cli/web/static/: manifest.json  sw.js
src/todo_cli/web/templates/: index.html
src/todo_cli/webapp/: app.py  auth.py  database.py  models.py  storage_bridge.py
src/todo_cli/webapp/server/: __init__.py  app.py  auth.py  database.py
src/todo_cli/webapp/templates/: analytics.html  base.html  dashboard.html  error.html  (+5 more)
src/uvicorn/: __init__.py
tests/: __init__.py  conftest.py  test_ai_assistant.py  test_analytics.py  test_anydo_adapter.py  test_api.py  test_api_contracts.py  test_app_sync_doctor.py  test_app_sync_manager.py  test_app_sync_setup.py  test_apple_reminders_adapter.py  test_bidirectional_sync.py  test_calendar_sync.py  test_collaboration.py  test_dashboard.py  test_database.py  test_evernote_adapter.py  test_github_issues_adapter.py  test_google_tasks_adapter.py  test_ios_api_compat.py  test_jira_adapter.py  test_microsoft_todo_adapter.py  test_notion_adapter.py  test_omnifocus_adapter.py  test_parser.py  test_parser_freeform.py  test_pomodoro.py  test_slack_plugin.py  test_storage_bridge.py  test_storage_ids.py  test_things_adapter.py  test_ticktick_adapter.py  test_todo.py  test_unique_global_ids.py  test_voice_input.py  test_web_backups.py
(+27 files in other folders)
