[project]
name = "todo-cli"
version = "0.1.0"
description = "A powerful command-line todo application with advanced features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-frontmatter>=1.1.0",
    "python-dateutil>=2.8.2",
    "parsedatetime>=2.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
todo = "todo_cli.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
