[project]
name = "todo-cli"
version = "0.1.1"
description = "A powerful command-line todo application with advanced features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-frontmatter>=1.1.0",
    "python-dateutil>=2.8.2",
    "parsedatetime>=2.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "tabulate>=0.9.0",
    "keyring>=24.0.0",
    "httpx>=0.27.0",
    "fpdf2>=2.8.4",
    "fastapi==0.115.6",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
pdf = [
    "fpdf2>=2.8.0",
]

[project.scripts]
todo = "todo_cli.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "respx>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks coroutine-based tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/todo_cli"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\\.pyi?$'
extend-exclude = ["^build/", "^dist/"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["todo_cli"]
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "src/todo_cli/__init__.py:F401",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
namespace_packages = true
follow_imports = "skip"
